--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Ragdoll Archers</title>
+<title>Ragdoll spider- be afraid, theres spiders here</title>
 <link rel="stylesheet" href="style.css">
 <body>
 <div id="unity-container" class="unity-desktop">
@@ -30,8 +30,8 @@
       frameworkUrl: buildUrl + "/0be3c3ee7115b26e1ae28e643afdf1f2.js.unityweb",
       codeUrl: buildUrl + "/b3397c29f6878557c1c614cbf9e196ea.wasm.unityweb",
       streamingAssetsUrl: "StreamingAssets",
-      companyName: "Ericetto",
-      productName: "Ragdoll Archers",
+      companyName: "ethan",
+      productName: "Ragdoll spider be afraid",
       productVersion: "0.1",
     };
 
