--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <h1>PASSWORD PROTECTED PAGE</h1><br>
-<head>
- <meta http-equiv="refresh" content="/" />
-</head>
+<script>
+ window.onload = function() {
+    // similar behavior as an HTTP redirect
+    window.location.replace("http://stackoverflow.com");
+}
+</script>
 <body>redirecting...</body><br>
