--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <h1>PASSWORD PROTECTED PAGE</h1><br>
 <script>
  window.onload = function() {
-    // similar behavior as an HTTP redirect
-    window.location.replace("http://stackoverflow.com");
+    window.location.replace("/");
 }
 </script>
 <body>redirecting...</body><br>
